# hunter

./: .travis.yml  appveyor.yml
_data/projects/: GTest.json  OpenSSL.json  foo.json  freetype.json  hypre.json  lehrfempp.json  occt.json  taskflow.json
cmake/configs/: default.cmake
cmake/projects/freetype/: hunter.cmake
cmake/projects/lehrfempp/: hunter.cmake
cmake/projects/occt/: hunter.cmake
cmake/projects/occt/ci/: build.cmd  build.sh  build2.sh  matrix.json
cmake/projects/occt/ci2/: matrix.json
cmake/projects/spdlog/: hunter.cmake
cmake/projects/taskflow/: hunter.cmake
docs/: index.rst
examples/occt/: CMakeLists.txt
